# QuantNBody

./: .gitignore  .readthedocs 2.yaml  .readthedocs.yaml  Demo_SA_CASSCF_formaldimine.py  QUANT_NBODY_DEMO.ipynb  Quant_NBody.py  Quant_NBody_fast.py  README.md  __init__.py  class2.py  class_Quant_NBody.py  env.yml  index.rst  paper.bib  paper.md  pyproject.toml  renamed_variables.txt  setup.py  symmetry.ipynb  test_unit_quantNBody.py  tools.py
Examples_FermiHubbard/: Demo_CASCI_LiH.py  Demo_CASCI_ringFermiHubbard.py  Demo_FCI_ringFermiHubbard.py
Examples_chemistry/: Demo_CASCI_H4.py  Demo_FCI_H4.py  Demo_FCI_LiH.py  Demo_SACASSCF_LiH.py  output_Psi4.txt  psi.71939.clean  psi.72464.clean  psi.92653.clean
PAPER_FOLDER/: paper.md
Tutorials/: BAD.ipynb  QUANT_NBODY_DEMO-v2.ipynb  QUANT_NBODY_DEMO.ipynb  Tuto_BOSE_HUBBARD.ipynb  Tuto_FIRST_STEP.ipynb  Tuto_Holstein_and_polaritonic_QED_dynamics.ipynb  Tuto_Holstein_and_polaritonic_QED_dynamics.rst  Tuto_PLAYING_WITH_STATES.ipynb  Tuto_SPIN_AND_AB_INITIO_HAMILTONIANS.ipynb  Tuto_SPIN_AND_FERMIONIC_HAMILTONIANS.ipynb  Tuto_SPIN_AND_HAMILTONIANS.ipynb  Tuto_hybrid_fermion_boson.ipynb  Tuto_hybrid_fermion_boson.rst  Tuto_visualization.ipynb  psi.34946.clean  psi.34999.clean  psi.35051.clean  readme.md
docs/: conf.py  index.rst
paper_JOSS/: paper.md
pybind/: Quant_NBody_fast.py  Quant_NBody_with acceleration.py  build_library.sh  command.txt  pybind.cpp
quant_nbody/: Quant_NBody.py  __init__.py  class_Quant_NBody.py
quantnbody/: __init__.py  (+3 more)
quantnbody.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+58 files in other folders)
